Fix: Upper toolbar doesn't align perfectly

--- a/app/stylesheets/index.css
+++ b/app/stylesheets/index.css
@@ -63,17 +63,13 @@ body {
 
 .toolbar {
     flex: auto;
-    display: flex;
-    align-items: flex-end;
 }
 
-.toolbar > * {
+.panels > * {
     box-sizing: border-box;
 }
 
 .player-0.toolbar {
-    transform: scale(-1, -1);
-
     /* to work around <https://stackoverflow.com/questions/41163227/
     cannot-draw-on-part-of-canvas/41164642#41164642> - also on the other side */
     padding-bottom: 1px;
@@ -85,6 +81,20 @@ body {
     cannot-draw-on-part-of-canvas/41164642#41164642> */
     padding-top: 1px;
     margin-top: -1px;
+}
+
+.player-0.toolbar .panels {
+    /* scaling the toolbar shows sub pixel shifts of the background, which then
+    doesn't align nicely anymore in Chrome 55.0.2883.87 (Official Build) m
+    (32-bit) */
+    transform: scale(-1, -1);
+}
+
+.panels {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
 }
 
 .activity, .reset {
